# Telescope_GuiderV2

./: .gitignore  CMakeLists.txt  DockerFile  README.md  cross_compile.sh  index.html  restart_services.sh  sync_files.sh
CaptureAndShare/: main.cpp
CaptureAndShare/dummy_images/: image00.raw  image01.raw  image02.raw  image03.raw  image04.raw  image05.raw  image06.raw  image07.raw  image08.raw  image09.raw
CaptureAndShare/inc/: cameraControl.hpp  senderReader.hpp
CaptureAndShare/inc_shr/: captureAndShare_types.hpp
CaptureAndShare/src/: cameraControl.cpp  senderReader.cpp
PCB/: .gitignore
PCB/guider_processing_system/: #auto_saved_files#  guider_lib.kicad_sym  guider_processing_system.kicad_pcb  guider_processing_system.kicad_prl  guider_processing_system.kicad_pro  guider_processing_system.kicad_sch  motor_section.kicad_sch
PCB/guider_processing_system/guider_system.pretty/: ST4.kicad_mod
PCB/guider_processing_system_cubemx/: guider_processing_system_cubemx.ioc
UartMqttBridge/: main.cpp
UartMqttBridge/inc/: MQTTHandler.hpp  ShmHandler.hpp  UartHandler.hpp  message_types.hpp
UartMqttBridge/src/: MQTTHandler.cpp  ShmHandler.cpp  UartHandler.cpp
camerademo/SVBCameraSDK/demo/: Makefile  SVBDemo  SVBDemo.cpp  SVB_image_4.raw
imageTransimit/: imageTransmit.py
imageTransmit/: imageTransmit.py
services/: captureAndShare.service  imagetransmit.service  uartmqttbridge.service  update_services.sh
starProcessor/: main.cpp
test_scripts/: send_camera_setup_shm.py
webServer/: package-lock.json  package.json
webServer/client/pages/: Index.tsx
